# learning_rust

./: README.md
the_book/cargo/more_about_cargo/: Cargo.toml
the_book/cargo/my_crate/: Cargo.toml
the_book/cargo/my_crate/src/: lib.rs
the_book/common_collections/exercises/central_tendency/: Cargo.toml
the_book/common_collections/hash_maps/src/: main.rs
the_book/common_collections/strings_utf8/: Cargo.toml
the_book/common_collections/strings_utf8/src/: main.rs
the_book/common_collections/vectors/src/: main.rs
the_book/common_concepts/boolean_type/: Cargo.toml
the_book/common_concepts/character_type/: Cargo.toml
the_book/common_concepts/comments/src/: main.rs
the_book/common_concepts/data_types/array_type/: Cargo.toml
the_book/common_concepts/data_types/floating_point/: Cargo.toml
the_book/common_concepts/data_types/numric_operations/: Cargo.toml
the_book/common_concepts/data_types/tuple_type/: Cargo.toml
the_book/common_concepts/functions/statements_and_expressions/: Cargo.toml
the_book/error_handling/erros_panic/: Cargo.toml
the_book/error_handling/panic_or_notpanic/: Cargo.toml
the_book/generics_traits_lifetimes/all_together/: Cargo.toml
the_book/generics_traits_lifetimes/function_with_trait/: Cargo.toml
the_book/generics_traits_lifetimes/removing_duplication/: Cargo.toml
the_book/generics_traits_lifetimes/traits_conditional/: Cargo.toml
the_book/guessing_game/src/: main.rs
the_book/ownership/src/: main.rs
the_book/structs/defining_structs/: Cargo.toml
the_book/tests/how_test_run/: Cargo.toml
(+41 files in other folders)
