[package]
name = "my_crate"
version = "0.1.0"
edition = "2018"
description = "A fun game where you guess what number the computer has chosen."
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Publishing to Crates.io
# cargo publish

# Publishing a New Version of an Existing Crate
# https://semver.org/

# Removing Versions from Crates.io with cargo yank
# cargo yank --vers 1.0.1